--- a/res/layout/activity_camerascreen.xml
+++ b/res/layout/activity_camerascreen.xml
@@ -4,19 +4,29 @@
     android:layout_height="fill_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    android:weightSum="1.0" >
+    android:weightSum="1" >
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.01" >
+        android:layout_weight="1" >
 
         <SurfaceView
             android:id="@+id/surfaceview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </LinearLayout>
+        <ImageView 
+            android:id="@+id/locview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/disablecam"
+            android:layout_margin="30dp"
+            android:scaleType="centerInside"
+            android:alpha="0.5"
+            android:visibility="invisible"
+            />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
